--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.3.1",
-    "postcss": "^8.3.6",
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.36",
     "postcss-cli": "^8.3.1",
-    "tailwindcss": "^2.2.7"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.9"
   }
 }
