--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-lazyload": "^3.2.0",
     "react-router-dom": "^6.0.2",
     "web-vitals": "^1.0.1"
