--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     ]
   },
   "devDependencies": {
+    "@types/react-test-renderer": "^18.0.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.4",
     "react-scripts": "5.0.0-next.58",
+    "react-test-renderer": "^17.0.2",
     "tailwindcss": "^3.0.1"
   }
 }
