--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "framer-motion": "^6.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -36,7 +37,6 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^4.5.4",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -55,6 +55,7 @@
     "postcss": "^8.4.4",
     "react-scripts": "5.0.0-next.58",
     "react-test-renderer": "^17.0.2",
-    "tailwindcss": "^3.0.1"
+    "tailwindcss": "^3.0.1",
+    "typescript": "^4.5.4"
   }
 }
