--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "framer-motion": "^6.4.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
+    "framer-motion": "^6.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-lazyload": "^3.2.0",
-    "react-router-dom": "^6.1.1",
-    "web-vitals": "^2.1.2"
+    "react-router-dom": "^6.3.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,25 +37,25 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.14",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-lazyload": "^3.1.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.4.0",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-lazyload": "^3.2.0",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
-    "autoprefixer": "^10.4.0",
-    "eslint": "^8.17.0",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-testing-library": "^5.5.1",
-    "postcss": "^8.4.4",
-    "react-scripts": "5.0.0-next.58",
-    "react-test-renderer": "^17.0.2",
-    "tailwindcss": "^3.0.1",
-    "typescript": "^4.5.4"
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "autoprefixer": "^10.4.8",
+    "eslint": "^8.21.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-testing-library": "^5.6.0",
+    "postcss": "^8.4.14",
+    "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
+    "tailwindcss": "^3.1.7",
+    "typescript": "^4.7.4"
   }
 }
