feat: improve app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
       "@components/*": ["src/components/*"],
       "@context/*": ["src/context/*"],
       "@pages/*": ["src/pages/*"],
+      "@hooks/*": ["src/hooks/*"],
     }
   },
   "include": ["./src"],
